# boss-katana-go

./: .gitignore  README.md  katana.py  pyproject.toml  shark.py
katana_go/: __init__.py  ble_midi.py  config.py  connection.py  roland_midi.py  roland_sysex.py  sysex.py
katana_go/resources/: roland_sysex.yaml  start_sequence.json
src/: ble_midi.py  connection.py  roland_midi.py  roland_sysex.py
src/resources/: roland_sysex.yaml
tests/: integration.py
