[tool.poetry]
name = "katana-go"
version = "0.1.0"
description = "A package to interact with Boss' Katana:GO amp via bluetooth"
authors = ["Pyrrhu5"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "katana_go"}]

[tool.poetry.dependencies]
python = "^3.9, <3.13"
bleak = {version = "^0.22.2" }
pyyaml = { version = "^6.0.1"}

[tool.poetry.group.dev.dependencies]
pyshark = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
